docs/apache-airflow-providers-amazon/2.5.0/_sources/_api/airflow/providers/amazon/aws/sensors/index.rst.txt
:mod:`airflow.providers.amazon.aws.sensors`
===========================================

.. py:module:: airflow.providers.amazon.aws.sensors


Submodules
----------
.. toctree::
   :titlesonly:
   :maxdepth: 1

   athena/index.rst
   cloud_formation/index.rst
   dms_task/index.rst
   ec2_instance_state/index.rst
   eks/index.rst
   emr_base/index.rst
   emr_containers/index.rst
   emr_job_flow/index.rst
   emr_step/index.rst
   glacier/index.rst
   glue/index.rst
   glue_catalog_partition/index.rst
   glue_crawler/index.rst
   redshift/index.rst
   s3_key/index.rst
   s3_keys_unchanged/index.rst
   s3_prefix/index.rst
   sagemaker_base/index.rst
   sagemaker_endpoint/index.rst
   sagemaker_training/index.rst
   sagemaker_transform/index.rst
   sagemaker_tuning/index.rst
   sqs/index.rst
   step_function_execution/index.rst


